--- a/functions/package.json
+++ b/functions/package.json
@@ -22,5 +22,6 @@
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
   },
-  "private": true
+  "private": true,
+  "version": "0.0.1"
 }
