--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,7 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "type": "module",
   "scripts": {
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
@@ -17,7 +18,8 @@
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
-    "googleapis": "^126.0.1"
+    "googleapis": "^126.0.1",
+    "nanoid": "^5.0.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
