fixed duplicated title for upload

--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "googleapis": "^126.0.1",
-    "nanoid": "^5.0.2"
+    "nanoid": "^5.0.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
