--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@sveltejs/adapter-auto": "^2.1.0",
 		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.24.1",
+		"@sveltejs/kit": "^1.27.3",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"@toast-ui/editor": "^3.2.2",
 		"airtable": "^0.12.2",
@@ -31,6 +31,7 @@
 		"svelte": "^4.2.0",
 		"svelte-preprocess": "^5.0.4",
 		"svelte-tiny-virtual-list": "^2.0.5",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.9"
 	},
 	"type": "module",
