--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dayjs": "^1.11.9",
 		"dotenv": "^16.3.1",
 		"js-sha256": "^0.10.1",
+		"marked": "^9.1.5",
 		"merh-forge-ui": "^0.0.26",
 		"nanoid": "^4.0.2",
 		"postcss": "^8.4.29",
