--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "typescript.tsdk": "node_modules\\typescript\\lib",
-    "cSpell.words": ["mukim"],
+    "cSpell.words": [
+        "mukim"
+    ],
     "editor.tokenColorCustomizations": {
         "[gruvboxConcoctis dark medium]": {
             "textMateRules": [
@@ -18,5 +20,14 @@
                 }
             ]
         }
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/node_modules": true
     }
 }
