added compareversion script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"airtable": "^0.12.2",
 		"base64-arraybuffer": "^1.0.2",
 		"dayjs": "^1.11.9",
+		"diff": "^5.1.0",
 		"dotenv": "^16.3.1",
 		"js-sha256": "^0.10.1",
 		"marked": "^9.1.5",
