--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,8 @@
   "main": "index.js",
   "dependencies": {
     "@supabase/supabase-js": "^2.32.0",
+    "chalk": "^5.3.0",
+    "diff": "^5.1.0",
     "dotenv": "^16.3.1",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
