--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.5.0",
 	"private": false,
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "vite dev --host",
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check .",
